2017-10-05  Bruno Haible  <bruno@clisp.org>

	Remove workaround against ancient systems with hidden ELOOP macro.
	* pathname.d (realpath, get_path_info): Use ELOOP, not ELOOP_VALUE.
	* configure.in: Don't invoke CL_ELOOP.
	* m4/eloop.m4: Remove file.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Remove workaround against ancient Cygwin bug (not known to gnulib).
	* pathname.d (directory_search_scandir): Use closedir, not CLOSEDIR.
	* unix.d (CLOSEDIR): Remove macro.
	* configure.in: Don't invoke CL_CLOSEDIR.
	* m4/closedir.m4: Remove file.
	* m4/filecharset.m4: Update.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-04  Bruno Haible  <bruno@clisp.org>

	maint: Modernize code style of Autoconf macros.
	* m4/*.m4: Use modern indentation and quoting style.
	* m4/filecharset.m4: Fix compilation failure with pre-C99 compilers
	(regression from 2008-05-27).
	* aclocal.m4, src/configure, modules/*/configure: Regenerated.

2017-10-03  Bruno Haible  <bruno@clisp.org>

	Remove unused autoconf test.
	* src/configure.in: Don't invoke CL_SHM_RMID.
	* src/m4/shm-rmid.m4: Remove file.
	* src/m4/shm.m4 (CL_SHM): Update.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-03  Bruno Haible  <bruno@clisp.org>

	Update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported \
	&& make -f Makefile.devel build-prerequisites".
	* build-aux/config.guess: Update from gnulib git.
	* build-aux/config.sub: Likewise.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
	* modules/*/configure, modules/*/config.h.in: Regenerated.
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.

2017-10-01  Bruno Haible  <bruno@clisp.org>

	Fix build failure on glibc systems where iconv converters are missing.
	* constsym.d: Don't define many charset symbols if HAVE_GOOD_ICONV is
	not set.
	* encoding.d: Remove verification that HAVE_GOOD_ICONV is set.