@@ -107,7 +107,6 @@ getresuid setresuid getresgid setresgid setreuid setregid dnl
 gethostname getcwd uname readdir_r rand_r)
 CL_RLIMIT dnl DEFS HAVE_GETRLIMIT, HAVE_SETRLIMIT, RLIMIT_RESOURCE_T, SETRLIMIT_CONST
 AC_FUNC_VFORK dnl DEFS HAVE_VFORK_H, vfork
-CL_WAITPID dnl DEFS PID_T
 CL_RUSAGE dnl DEFS HAVE_SYS_RESOURCE_H, HAVE_GETRUSAGE, RUSAGE_WHO_T, HAVE_SYS_TIMES_H
 CL_IOCTL dnl DEFS HAVE_IOCTL, IOCTL_REQUEST_T, IOCTL_ARGUMENT_T, IOCTL_DOTS HAVE_FIONREAD, NEED_SYS_FILIO_H, NEED_SYS_IOCTL_H, HAVE_RELIABLE_FIONREAD
 CL_POLL dnl DEFS HAVE_POLL, HAVE_RELIABLE_POLL
