@@ -1,5 +1,14 @@
 2017-10-05  Bruno Haible  <bruno@clisp.org>
 
+	Remove workaround against ancient systems with old waitpid declaration.
+	* unix.d (waitpid, wait2): Use pid_t instead of PID_T.
+	* unixaux.d (wait2): Likewise.
+	* configure.in: Don't invoke CL_WAITPID.
+	* m4/waitpid.m4: Remove file.
+	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
+
+2017-10-05  Bruno Haible  <bruno@clisp.org>
+
 	Remove workaround against ancient systems with hidden ELOOP macro.
 	* pathname.d (realpath, get_path_info): Use ELOOP, not ELOOP_VALUE.
 	* configure.in: Don't invoke CL_ELOOP.
